fix: pinpoint fix for logo clipping on PC breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -342,9 +342,10 @@ nav a:hover {
 
 .shop-card img,
 .shop-logo-img {
-    width: 100%;
-    height: auto;
-    max-height: 250px;
+    max-width: 100% !important;
+    max-height: 100% !important;
+    width: auto !important;
+    height: auto !important;
     object-fit: contain !important;
     transition: var(--transition-slow);
 }
